[package]
name = "aoc"
version = "0.1.0"
authors = ["Jeremy Knope <me@jeremyknope.com>"]
publish = false
edition = "2018"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
clap = "2.32.0"
regex = "1.1.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "aoc_benchmark"
harness = false
